@@ -7,6 +7,11 @@
                                   Changelog
 
 Daniel Stenberg (8 Oct 2008)
+- Igor filed bug #2111613 (http://curl.haxx.se/bug/view.cgi?id=2111613) that
+  eventually identified a flaw in how the multi_socket interface in some cases
+  missed to call the timeout callback when easy interfaces are removed and
+  added within the same millisecond.
+
 - Igor Novoseltsev brought a patch that introduced two new options to
   curl_easy_setopt: CURLOPT_USERNAME and CURLOPT_PASSWORD that sort of
   deprecates the good old CURLOPT_USERPWD since they allow applications to set
